# Quantum

./: .gitignore
quantum_client/: README.md  pubspec.yaml
quantum_client/android/app/: build.gradle.kts
quantum_client/android/app/src/main/: AndroidManifest.xml
quantum_client/android/app/src/main/kotlin/com/example/quantum_client/: MainActivity.kt
quantum_client/ios/Runner/: Info.plist
quantum_client/ios/Runner.xcodeproj/: project.pbxproj
quantum_client/lib/: main.dart
quantum_client/lib/screens/: chat_list_screen.dart  chat_screen.dart  login_screen.dart  register_screen.dart
quantum_client/lib/theme/: quantum_theme.dart
quantum_client/linux/: CMakeLists.txt
quantum_client/linux/runner/: my_application.cc
quantum_client/macos/Runner.xcodeproj/: project.pbxproj
quantum_client/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
quantum_client/macos/Runner/Configs/: AppInfo.xcconfig
quantum_client/test/: widget_test.dart
quantum_client/web/: index.html  manifest.json
quantum_client/windows/: CMakeLists.txt
quantum_client/windows/runner/: Runner.rc  main.cpp
quantum_server/: .env  Cargo.toml
quantum_server/src/: main.rs
quantum_server/src/auth/: mod.rs
quantum_server/src/db/: chat.rs  message.rs  mod.rs  reaction.rs  redis.rs  user.rs
quantum_server/src/ws/: server.rs
