[package]
name = "quantum_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
jsonwebtoken = "9"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "macros", "chrono"] }
dotenvy = "0.15"
redis = { version = "0.23", features = ["tokio-comp"] }
openssl = { version = "0.10", features = ["vendored"] } # для TLS
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
